spring-deployment-helm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-file-upload
spec:
  selector:
    app: spring-file-upload
  ports:
  - port: 80 # service port
    targetPort: 8080 # container port

# service port 80 point to container port 8080 then ingress expose service use port 80
