spring-deployment-helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-upload-igs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - file-upload.devith.it.com
      secretName: spring-tls
  rules:
  - host: file-upload.devith.it.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-file-upload
            port: 
              number: 80
